# llm-zoomcamp-2026-code

./: README.md  Readme.MD  pyproject.toml
Lesson 1 RAG/: rag_cleaned.ipynb
Lesson 1 RAG/sources/: courses.json
Lesson 1A RAG/: ingest.py  notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb  rag_helper.py
Lesson 1A RAG/Homework/: 01-agentic-rag.ipynb
Lesson 1B Function calling and tool use/: agents.ipynb
Lesson 2 Vector Store/: ingest.py  rag_helper.py  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
Lesson 2 Vector Store/Homework/: my-homework.ipynb
